--- a/Civic-Issue-Reporter-main/frontend/package.json
+++ b/Civic-Issue-Reporter-main/frontend/package.json
@@ -37,7 +37,7 @@
     "json-schema": "^0.4.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.514.0",
-    "mapbox-gl": "^3.15.0",
+    "maplibre-gl": "^5.19.0",
     "next-themes": "^0.4.6",
     "pbf": "^4.0.1",
     "react": "^19.1.1",
